<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bartender</string>
    <string name="title_add_ingredient_fragment">Добавить ингредиент</string>
    <string name="item_title">Название рецепта</string>
    <string name="item_info">Информация</string>
    <string name="app_title">Smart Bartender</string>

    <string name="ingredients">Ингредиенты</string>
    <string name="recipes">Рецепты</string>
    <string name="settings">Настройки</string>

    <string name="layer_recipes">Слоёныe рецепты</string>
    <string name="title_coefficient">Коэффициент для конвертации:</string>
    <string name="const_100">100</string>
    <string name="info"> Это приложение позволяет готовить коктейли!</string>
    <string name="information_text">Это приложение позволяет быстро и удобно готовить разные коктейли!</string>


    <string name="ingredient_input_text">Название ингредиента</string>
    <string name="save_button">Сохранить</string>
    <string name="clear_button">Очистить</string>
    <string name="cancel_button">Отменить</string>

    <string name="motor_1">Мотор 1</string>
    <string name="motor_2">Мотор 2</string>
    <string name="motor_3">Мотор 3</string>
    <string name="motor_4">Мотор 4</string>
    <string name="motor_5">Мотор 5</string>
    <string name="motor_6">Мотор 6</string>
    <string name="motor_settings_intro">Установите название жидкостей так, как вы поставили их в систему</string>
    <string name="set_с_btn">По умолчанию</string>
    <string name="empty_list_of_ingredients">В базе данных нет ингредиентов, добавьте их с помощью окна ниже</string>
    <string name="empty_ingredient_list_for_motors">"В базе данных нет ингредиентов, добавьте их в пункте меню \"Ингредиенты\""</string>
    <string name="coefficient_intro">Коэффициент конвертации необходимо установить для корректного наливания жидкости</string>
    <string name="cook_btn_text">сделать</string>
    <string name="ingredients_information_text">Ингредиенты и коэффициенты</string>
    <string name="ingredients_information_recipes"> Список рецептов </string>
    <string name="empty_list_of_recipes"> В базе данных нет рецептов, добавьте их с помощью кнопки внизу экрана</string>
    <string name="info_fragment_label">Инструкция</string>
    <string name="motors_fragment_label">Настройка моторов</string>
    <string name="ingredients_fragment_label">Ингредиенты</string>
    <string name="coefficient_1500">1500</string>
    <string name="filter_simple">Простые коктейли</string>
    <string name="filter_layer">Слоёные коктейли</string>
    <string name="layer_1">1</string>
    <string name="ml_title">мл</string>
    <string name="ingredient">ингредиенты</string>
    <string name="layer_title">слой</string>
    <string name="coefficient_input">Коэффициент:</string>
    <string name="type">type</string>
    <string name="bluetoothWarning">Приложение может работать только с включеным Bluetooth</string>
    <string name="coefficient_information_text">
        Этот коэффициент показывает сколько тактов двигателя
        необходимо для наливания 1 мл ингредиента. По умолчанию он равен 1500 и при таком показателе
        гарантирует погрешность не более 0,05 мл. Но для более точной настройки его можно изменить, при этом
        стоить помнить, что точность дозировки зависит от вязкости жидкости.
    </string>
    <string name="app_information_text">
        Этот робот позволяет делать <b>коктейли</b> двух типов: <b>простые</b> и <b>слоёные</b> !\n\n
        Для приготовления коктейля необходимо нажать на кнопку <i>СДЕЛАТЬ</i>*.
        Но перед этим следует настроить систему следующим образом:\n\n
        <i>1. Составить список ингредиентов \n
        2. Установить ингредиенты в меню \"Настройка моторов\"\n
        3. Создать рецепты коктелей</i>\n\n
        <i>Теперь можно начинать!</i>\n\n
        <b>Немного о настройке моторов</b>\n
        Необходимо установить жидкости в систему и настроить их соответствующим образом.
        Например, если под мотор номер 1 вы установили \"Апельсиновый сок\", то в выпадающем меню
        напротив надписи \"Мотор 1\" необходимо выбрать \"Апельсиновый сок\".\n\n
        <i>Дождитесь окончания приготовления коктейля во избежание некорректной работы системы!</i>\n\n
        *Если кнопка <i>СДЕЛАТЬ</i> серого цвета, то данный рецепт недоступен для приготовления,
        так как входящие в него ингредиенты не установлены в систему.\n\n
  </string>

</resources>
