<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable
        name="fragment"
        type="com.example.user.bartender.settings.MotorsFragment"
        />
    <variable
        name="viewModel"
        type="com.example.user.bartender.settings.MotorsViewModel"
        />
</data>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="@dimen/normal_size_margin">

        <TextView
            android:id="@+id/motors_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/motor_settings_intro" />

        <GridLayout
            android:id="@+id/spinners_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:orientation="horizontal">

            <TextView
                android:layout_margin="@dimen/normal_size_margin"
                android:text="@string/motor_1"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/setting_1"
                android:layout_width="@dimen/spinner_wight"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/normal_size_margin" />

            <TextView
                android:layout_margin="@dimen/normal_size_margin"
                android:text="@string/motor_2"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/setting_2"
                android:layout_width="@dimen/spinner_wight"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/normal_size_margin" />

            <TextView
                android:layout_margin="@dimen/normal_size_margin"
                android:text="@string/motor_3"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/setting_3"
                android:layout_width="@dimen/spinner_wight"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/normal_size_margin" />

            <TextView
                android:layout_margin="@dimen/normal_size_margin"
                android:text="@string/motor_4"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/setting_4"
                android:layout_width="@dimen/spinner_wight"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/normal_size_margin" />

            <TextView
                android:layout_margin="@dimen/normal_size_margin"
                android:text="@string/motor_5"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/setting_5"
                android:layout_width="@dimen/spinner_wight"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/normal_size_margin" />

            <TextView
                android:layout_margin="@dimen/normal_size_margin"
                android:text="@string/motor_6"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/setting_6"
                android:layout_width="@dimen/spinner_wight"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/normal_size_margin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_motors_btn"
                android:layout_marginEnd="8dp"
                android:padding="@dimen/normal_size_margin"
                android:text="@string/clear_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_motors_btn"
                android:padding="@dimen/normal_size_margin"
                android:text="@string/save_button" />

        </GridLayout>
    </LinearLayout>
</ScrollView>
</layout>