<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->

    <data>
        <variable
            name="fragment"
            type="com.example.user.bartender.recipes.EditFragment"
            />
    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_size_margin"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/item_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_size_margin"
            android:layout_marginEnd="16dp"
            android:text="@string/layer_title"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/spinner_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/large_size_margin"
            android:gravity="center"
            android:text="@string/ingredient"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

        <Spinner
            android:id="@+id/ingredient_1"
            android:layout_width="@dimen/spinner_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/large_size_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/volume_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/large_size_margin"
            android:autofillHints="volume"
            android:hint="@string/const_100"
            android:inputType="numberDecimal"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toStartOf="@+id/layer_1"
            app:layout_constraintStart_toEndOf="@+id/ingredient_1"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_size_margin"
            android:layout_marginEnd="@dimen/normal_size_margin"
            android:text="@string/ml_title"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

        <EditText
            android:id="@+id/layer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autofillHints="layer"
            android:inputType="number"
            android:text="@string/layer_1"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/ingredient_2"
            android:layout_width="@dimen/spinner_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_1" />

        <EditText
            android:id="@+id/volume_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/xlarge_size_margin"
            android:layout_marginEnd="@dimen/large_size_margin"
            android:autofillHints="volume"
            android:hint="@string/const_100"
            android:inputType="number"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toStartOf="@+id/layer_2"
            app:layout_constraintStart_toEndOf="@+id/ingredient_2"
            app:layout_constraintTop_toBottomOf="@+id/volume_1" />

        <EditText
            android:id="@+id/layer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_size_margin"
            android:layout_marginEnd="16dp"
            android:autofillHints="layer"
            android:inputType="number"
            android:text="@string/layer_1"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layer_1"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/ingredient_3"
            android:layout_width="@dimen/spinner_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_2" />

        <EditText
            android:id="@+id/volume_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/xlarge_size_margin"
            android:layout_marginEnd="@dimen/large_size_margin"
            android:autofillHints="volume"
            android:hint="@string/const_100"
            android:inputType="number"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toStartOf="@+id/layer_3"
            app:layout_constraintStart_toEndOf="@+id/ingredient_3"
            app:layout_constraintTop_toBottomOf="@+id/volume_2" />

        <EditText
            android:id="@+id/layer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_size_margin"
            android:layout_marginEnd="16dp"
            android:autofillHints="layer"
            android:inputType="number"
            android:text="@string/layer_1"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layer_2"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/ingredient_4"
            android:layout_width="@dimen/spinner_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_3" />

        <EditText
            android:id="@+id/volume_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="volume"
            android:hint="@string/const_100"
            android:inputType="number"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toStartOf="@+id/layer_4"
            app:layout_constraintStart_toEndOf="@+id/ingredient_4"
            app:layout_constraintTop_toBottomOf="@+id/volume_3" />

        <EditText
            android:id="@+id/layer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_size_margin"
            android:layout_marginEnd="16dp"
            android:autofillHints="layer"
            android:inputType="number"
            android:text="@string/layer_1"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layer_3"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/ingredient_5"
            android:layout_width="@dimen/spinner_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_4" />

        <EditText
            android:id="@+id/volume_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/xlarge_size_margin"
            android:layout_marginEnd="@dimen/large_size_margin"
            android:autofillHints="volume"
            android:hint="@string/const_100"
            android:inputType="number"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toStartOf="@+id/layer_5"
            app:layout_constraintStart_toEndOf="@+id/ingredient_5"
            app:layout_constraintTop_toBottomOf="@+id/volume_4" />

        <EditText
            android:id="@+id/layer_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="layer"
            android:inputType="number"
            android:text="@string/layer_1"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layer_4"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/ingredient_6"
            android:layout_width="@dimen/spinner_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_5" />

        <EditText
            android:id="@+id/volume_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="value"
            android:hint="@string/const_100"
            android:inputType="number"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toStartOf="@+id/layer_6"
            app:layout_constraintStart_toEndOf="@+id/ingredient_6"
            app:layout_constraintTop_toBottomOf="@+id/volume_5" />

        <EditText
            android:id="@+id/layer_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="layer"
            android:inputType="numberDecimal"
            android:text="@string/layer_1"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layer_5"
            tools:ignore="LabelFor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recipe_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_size_margin"
            android:layout_marginEnd="@dimen/normal_size_margin"
            android:text="@string/cancel_button"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toStartOf="@+id/recipe_save"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recipe_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_size_margin"
            android:text="@string/save_button"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>